kernel/src/libs/intertrait/tests/ui/duplicate-flags.stderr
error: Duplicated flag: sync
 --> $DIR/duplicate-flags.rs:5:18
  |
5 | #[cast_to([sync, sync] Greet)]
  |                  ^^^^
